--- a/Recorder.xaml
+++ b/Recorder.xaml
@@ -8,26 +8,61 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="Recorder">
 
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
+    <ScrollViewer VerticalScrollBarVisibility="Auto">
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="0.25*" />
+                <!--Tab control tuggle-->
+                <ColumnDefinition Width="*" />
+                <!--contents area No.1-->
+                <!--Tub menu No.1-->
+                <ColumnDefinition Width="*" />
+                <!--contents area No.2-->
+                <!--Tub menu No.2-->
+                <ColumnDefinition Width="*" />
+                <!--contents area No.3-->
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*" />
+                <!--No.12-->
+                <ColumnDefinition Width="0.25*" MinWidth="10"/>
+                <!--scroll bar No.13-->
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="2*" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
 
-        <Grid Grid.Row="0">
-        <Label FontSize="50" Grid.Row="0">Page1</Label>
-        <Button Click="Button_Click" Margin="10,161,220,73">ページ２へ遷移</Button>
-        </Grid>
-
-        <Grid Grid.Row="1">
-        <Label Content="Base file name" Height="30" Margin="470,185,232.6,185"/>
-        <Label Content="numbering" Height="30" Margin="636,185,80.6,185"/>
-        <Label Content="_" Height="30" Margin="605,211,170.6,159"/>
-        <TextBox x:Name="Rec_numbering_filename" Height="23" TextWrapping="Wrap" Text="1" Width="120" Margin="636,215,37.6,162" />
-        <TextBox x:Name="Rec_base_filename" Height="23" TextWrapping="Wrap" Text="Sound" Width="120" Margin="470,215,203.6,162"/>
-        <Button x:Name="Rec_num_prev" Content="prev." Width="51" Margin="636,243,106.6,137" Click="Rec_num_prev_Click"/>
-        <Button x:Name="Rec_num_next" Content="next" Width="51" Margin="705,243,37.6,137" Click="Rec_num_next_Click"/>
+            <local:NotifyGrid Grid.Row="0" x:Name="DisplaySignalArea" Grid.Column="1" Grid.ColumnSpan="10" SizeChanged="DisplaySignalArea_SizeChanged">
+                <Viewbox Stretch="Uniform">
+                    <Canvas
+                    Name="DisplaySignalCanvas"
+                    Height="{Binding ElementName=DisplaySignalArea, Path=ActualHeight, UpdateSourceTrigger=PropertyChanged}"
+                    Width="{Binding ElementName=DisplaySignalArea, Path=ActualWidth, UpdateSourceTrigger=PropertyChanged}">
+                        <Rectangle
+                        Name="DisplaySignalCanvas_"
+                        Width="{Binding ElementName=DisplaySignalArea, Path=ActualWidth, UpdateSourceTrigger=PropertyChanged}"
+                        Height="{Binding ElementName=DisplaySignalArea, Path=ActualHeight, UpdateSourceTrigger=PropertyChanged}"
+                        >
+                            <Rectangle.Fill>
+                                <SolidColorBrush Color="{StaticResource wisteria}" />
+                            </Rectangle.Fill>
+                        </Rectangle>
+                    </Canvas>
+                </Viewbox>
+            </local:NotifyGrid>
+            <Grid Name="DisplaySignalLevelMeterArea"  Grid.Row="0" Grid.Column="11" Grid.ColumnSpan="2" HorizontalAlignment="Center">
+                <StackPanel Orientation="Horizontal" >
+                    <ProgressBar x:Name="Rec_Level_Meter" MinWidth="20" Orientation="Vertical" SmallChange="0.01" Foreground="#FFCCFF66" />
+                    <TextBlock x:Name="Rec_Level_Meter_Value" TextWrapping="Wrap" Text="0" FontSize="18" />
+                </StackPanel>
+            </Grid>
 
         <Button x:Name="Rec_start" Content="Start" Width="75" Margin="509,349,209.6,26" Click="Rec_start_Click"/>
         <Button x:Name="Rec_stop" Content="Stop" Width="75" Margin="636,349,82.6,26" Click="Rec_stop_Click" IsEnabled="False"/>
