--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -10,10 +10,13 @@
                      Height="550" Width="800"
                      MinHeight="220" MinWidth="320"
                      >
-    <Window.Resources>
+    <Fluent:RibbonWindow.Resources>
         <SolidColorBrush x:Key="MediumGreyBrush" Color="#ff6e6e6e"/>
-    </Window.Resources>
-
+        <SolidColorBrush x:Key="Fluent.Ribbon.Brushes.RibbonTabControl.Background" Color="{StaticResource Accent_highlight}"></SolidColorBrush>
+        <SolidColorBrush x:Key="Fluent.Ribbon.Brushes.RibbonTabControl.TabsGrid.Background"  Color="{StaticResource Accent_highlight}"></SolidColorBrush>
+        <SolidColorBrush x:Key="Fluent.Ribbon.Brushes.RibbonTabControl.Content.Background"  Color="{StaticResource Accent_highlight}"></SolidColorBrush>
+        <SolidColorBrush x:Key="Fluent.Ribbon.Brushes.RibbonWindow.TitleBackground"  Color="{StaticResource Accent_highlight}"></SolidColorBrush>
+    </Fluent:RibbonWindow.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="0.25*" />
@@ -55,6 +58,9 @@
 
             <!--Tabs-->
             <Fluent:RibbonTabItem Header="HOME" KeyTip="T1">
+                <Fluent:RibbonTabItem.Background>
+                    <SolidColorBrush Color="{StaticResource Accent_highlight}" />
+                </Fluent:RibbonTabItem.Background>
                 <Fluent:RibbonGroupBox
                    Header="ボタン"
                    KeyTip="B">
@@ -62,42 +68,73 @@
                     <Fluent:Button Header="作業フォルダ"
                    KeyTip="BI"
                    Click="Button_Click_Workin"
-                   LargeIcon="./image/icon_113430_256.png"/>
+                   LargeIcon="./image/icon_113430_256.png">
+                        <Fluent:Button.Background>
+                            <SolidColorBrush Color="{StaticResource Accent_highlight}" />
+                        </Fluent:Button.Background>
+                    </Fluent:Button>
 
                     <Fluent:Button Header="中ボタン"
                    KeyTip="MI"
                    Size="Middle"
                    Click="Button_Click_Render"
-                   Icon="./image/icon_113430_256.png"/>
+                   Icon="./image/icon_113430_256.png">
+                        <Fluent:Button.Background>
+                            <SolidColorBrush Color="{StaticResource Accent_highlight}" />
+                        </Fluent:Button.Background>
+                    </Fluent:Button>
 
                     <Fluent:Button Header="小ボタン"
                    KeyTip="SM"
                    Size="Small"
-                   Icon="./image/icon_113430_256.png"/>
-
+                   Icon="./image/icon_113430_256.png">
+                        <Fluent:Button.Background>
+                            <SolidColorBrush Color="{StaticResource Accent_highlight}" />
+                        </Fluent:Button.Background>
+                    </Fluent:Button>
+                    <Fluent:RibbonGroupBox.Background>
+                        <SolidColorBrush Color="{StaticResource Accent_highlight}" />
+                    </Fluent:RibbonGroupBox.Background>
                 </Fluent:RibbonGroupBox>
             </Fluent:RibbonTabItem>
 
             <Fluent:RibbonTabItem Header="録音" KeyTip="T2">
+                <Fluent:RibbonTabItem.Background>
+                    <SolidColorBrush Color="{StaticResource Accent_highlight}" />
+                </Fluent:RibbonTabItem.Background>
                 <Fluent:RibbonGroupBox
                    Header="ボタン"
                    KeyTip="B">
                     <!-- この中にコントロールを配置する -->
                     <Fluent:Button Header="大ボタン"
                    KeyTip="BI"
-                   LargeIcon="./image/icon_113430_256.png"/>
+                   LargeIcon="./image/icon_113430_256.png">
+                        <Fluent:Button.Background>
+                            <SolidColorBrush Color="{StaticResource Accent_highlight}" />
+                        </Fluent:Button.Background>
+                    </Fluent:Button>
 
                     <Fluent:Button Header="中ボタン"
                    KeyTip="MI"
                    Size="Middle"
-                   Icon="./image/icon_113430_256.png"/>
+                   Icon="./image/icon_113430_256.png">
+                        <Fluent:Button.Background>
+                            <SolidColorBrush Color="{StaticResource Accent_highlight}" />
+                        </Fluent:Button.Background>
+                    </Fluent:Button>
 
                     <Fluent:Button Header="小ボタン"
                    KeyTip="SM"
                    Size="Small"
-                   Icon="./image/icon_113430_256.png"/>
+                   Icon="./image/icon_113430_256.png">
+                        <Fluent:Button.Background>
+                            <SolidColorBrush Color="{StaticResource Accent_highlight}" />
+                        </Fluent:Button.Background>
+                    </Fluent:Button>
 
-
+                    <Fluent:RibbonGroupBox.Background>
+                        <SolidColorBrush Color="{StaticResource Accent_highlight}" />
+                    </Fluent:RibbonGroupBox.Background>
                 </Fluent:RibbonGroupBox>
                 <Fluent:RibbonGroupBox
                    Header="ボタン"
@@ -109,8 +146,15 @@
                           SelectionChanged="audio_device_list_SelectionChanged"
                           DropDownOpened="audio_device_list_DropDownOpened"
                           IsReadOnly="True"/>
+                        <ListBox.Background>
+                            <SolidColorBrush Color="{StaticResource Accent_highlight}" />
+                        </ListBox.Background>
+
                     </ListBox>
                     <Slider x:Name="Input_volume" ValueChanged="Slider_ValueChanged" Maximum="1" SmallChange="0.01" MinWidth="100"/>
+                    <Fluent:RibbonGroupBox.Background>
+                        <SolidColorBrush Color="{StaticResource Accent_highlight}" />
+                    </Fluent:RibbonGroupBox.Background>
 
 
                 </Fluent:RibbonGroupBox>
@@ -118,6 +162,9 @@
             </Fluent:RibbonTabItem>
 
             <Fluent:RibbonTabItem Header="再生" KeyTip="T3">
+                <Fluent:RibbonTabItem.Background>
+                    <SolidColorBrush Color="{StaticResource Accent_highlight}" />
+                </Fluent:RibbonTabItem.Background>
                 <Fluent:RibbonGroupBox
                    Header="ボタン"
                    KeyTip="B"
@@ -125,18 +172,33 @@
                     <!-- この中にコントロールを配置する -->
                     <Fluent:Button Header="大ボタン"
                    KeyTip="BI"
-                   LargeIcon="./image/icon_113430_256.png"/>
+                   LargeIcon="./image/icon_113430_256.png">
+                        <Fluent:Button.Background>
+                            <SolidColorBrush Color="{StaticResource Accent_highlight}" />
+                        </Fluent:Button.Background>
+                    </Fluent:Button>
 
                     <Fluent:Button Header="中ボタン"
                    KeyTip="MI"
                    Size="Middle"
-                   Icon="./image/icon_113430_256.png"/>
+                   Icon="./image/icon_113430_256.png">
+                        <Fluent:Button.Background>
+                            <SolidColorBrush Color="{StaticResource Accent_highlight}" />
+                        </Fluent:Button.Background>
+                    </Fluent:Button>
 
                     <Fluent:Button Header="小ボタン"
                    KeyTip="SM"
                    Size="Small"
-                   Icon="./image/icon_113430_256.png"/>
+                   Icon="./image/icon_113430_256.png">
+                        <Fluent:Button.Background>
+                            <SolidColorBrush Color="{StaticResource Accent_highlight}" />
+                        </Fluent:Button.Background>
+                    </Fluent:Button>
 
+                    <Fluent:RibbonGroupBox.Background>
+                        <SolidColorBrush Color="{StaticResource Accent_highlight}" />
+                    </Fluent:RibbonGroupBox.Background>
 
                 </Fluent:RibbonGroupBox>
 
@@ -151,11 +213,18 @@
                    KeyTip="BI"
                    Click="Button_Click_Recorder"
                    LargeIcon="./image/icon_113430_256.png"/>
+                    <Fluent:RibbonGroupBox.Background>
+                        <SolidColorBrush Color="{StaticResource Accent_highlight}" />
+                    </Fluent:RibbonGroupBox.Background>
+
                 </Fluent:RibbonGroupBox>
 
             </Fluent:RibbonTabItem>
 
             <Fluent:RibbonTabItem Header="定位" KeyTip="T3">
+                <Fluent:RibbonTabItem.Background>
+                    <SolidColorBrush Color="{StaticResource Accent_highlight}" />
+                </Fluent:RibbonTabItem.Background>
             </Fluent:RibbonTabItem>
 
         </Fluent:Ribbon>
@@ -179,12 +248,19 @@
 
             <Grid Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="0" Panel.ZIndex="1">
                 <Border
-                    Background="#FFBFE3FF"
                     BorderThickness="0,0,1,0"
                     BorderBrush="#000000"
                     Width="Auto"
-                    />
+                    >
+                    <Border.Background>
+                        <SolidColorBrush Color="{StaticResource Active}" />
+                    </Border.Background>
+                </Border>
                 <TabControl TabStripPlacement="Left" BorderThickness="0" Grid.ColumnSpan="2">
+                    <TabControl.Background>
+                        <SolidColorBrush Color="{StaticResource Accent}" />
+                    </TabControl.Background>
+
                     <TabItem Style="{StaticResource Menu}" IsEnabled="False" Height="5"/>
                     <TabItem Style="{StaticResource Menu}" IsSelected="True" Header="本日のおすすめ"/>
                     <TabItem Style="{StaticResource Menu}" Header="おつまみ"/>
@@ -198,7 +274,9 @@
             </Grid>
             <Grid Grid.Column="2" Grid.Row="0" Panel.ZIndex="2">
                 <Button Name="TabMenuControlerClose" Click="Button_Tab_Close">
-
+                    <Button.Background>
+                        <SolidColorBrush Color="{StaticResource Accent}" />
+                    </Button.Background>
                 </Button>
             </Grid>
         </Grid>
