--- a/Recorder.xaml
+++ b/Recorder.xaml
@@ -11,7 +11,7 @@
       Title="Recorder">
     
     <Page.Background>
-        <SolidColorBrush Color="{StaticResource Highlight1}" />
+        <SolidColorBrush Color="{StaticResource Active}" />
     </Page.Background>
 
 
@@ -85,7 +85,7 @@
                 <Border rg:ResponsiveGrid.SM="1" >
                     <Button Click="Button_Click">ページ２へ遷移
                         <Button.Background>
-                            <SolidColorBrush Color="{StaticResource Accent}" />
+                            <SolidColorBrush Color="{StaticResource Normal}" />
                         </Button.Background>
                     </Button>
                 </Border>
@@ -108,7 +108,7 @@
                                      Format="0"
                                      >
                         <Fluent:Spinner.Background>
-                            <SolidColorBrush Color="{StaticResource Accent}" />
+                            <SolidColorBrush Color="{StaticResource Active}" />
                         </Fluent:Spinner.Background>
                     </Fluent:Spinner>
                 </Border>
@@ -136,12 +136,12 @@
                     <WrapPanel Orientation="Horizontal">
                         <Button x:Name="Rec_start" Content="Start" Width="75" Click="Rec_start_Click">
                             <Button.Background>
-                                <SolidColorBrush Color="{StaticResource Accent}" />
+                                <SolidColorBrush Color="{StaticResource Normal}" />
                             </Button.Background>
                         </Button>
                         <Button x:Name="Rec_stop" Content="Stop" Width="75" Click="Rec_stop_Click" IsEnabled="False">
                             <Button.Background>
-                                <SolidColorBrush Color="{StaticResource Accent}" />
+                                <SolidColorBrush Color="{StaticResource Normal}" />
                             </Button.Background>
                         </Button>
                     </WrapPanel>
